WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
70720
[GTK] fast/events/event-creation.html fails creating MediaStreamEvent
https://bugs.webkit.org/show_bug.cgi?id=70720
Summary
[GTK] fast/events/event-creation.html fails creating MediaStreamEvent
Alejandro G. Castro
Reported
2011-10-24 05:35:39 PDT
It is happening since
http://trac.webkit.org/changeset/98196
. I'm going to skip the test until we find the issue, adding people in the commit.
Attachments
patch
(4.01 KB, patch)
2011-11-11 09:03 PST
,
Per-Erik Brodin
no flags
Details
Formatted Diff
Diff
patch with proper ChangeLog
(4.16 KB, patch)
2011-11-12 10:56 PST
,
Per-Erik Brodin
no flags
Details
Formatted Diff
Diff
patch 3
(4.16 KB, patch)
2011-11-12 14:25 PST
,
Per-Erik Brodin
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Alejandro G. Castro
Comment 1
2011-10-24 05:56:53 PDT
Skipped
http://trac.webkit.org/changeset/98235
Per-Erik Brodin
Comment 2
2011-11-11 09:03:17 PST
Created
attachment 114711
[details]
patch MediaStreamEvent changed in
r98044
but got accidentally reverted in
r98196
.
Philippe Normand
Comment 3
2011-11-11 09:26:56 PST
Comment on
attachment 114711
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=114711&action=review
Looks good but I'd like to wait a green cr-linux EWS before setting r+
> Source/WebCore/ChangeLog:12 > + * mediastream/MediaStreamEvent.cpp: > + (WebCore::MediaStreamEvent::stream): > + (WebCore::MediaStreamEvent::interfaceName): > + * mediastream/MediaStreamEvent.h: > + * mediastream/MediaStreamEvent.idl:
Can you please explain the changes? At least a general note would be nice.
Per-Erik Brodin
Comment 4
2011-11-12 10:56:02 PST
Created
attachment 114839
[details]
patch with proper ChangeLog (In reply to
comment #3
)
> Can you please explain the changes? At least a general note would be nice.
I've updated the ChangeLog.
Per-Erik Brodin
Comment 5
2011-11-12 14:25:18 PST
Created
attachment 114843
[details]
patch 3 Fixed typo.
Philippe Normand
Comment 6
2011-11-13 23:42:24 PST
Comment on
attachment 114843
[details]
patch 3 Thanks!
WebKit Review Bot
Comment 7
2011-11-16 02:35:46 PST
Comment on
attachment 114843
[details]
patch 3 Clearing flags on attachment: 114843 Committed
r100425
: <
http://trac.webkit.org/changeset/100425
>
WebKit Review Bot
Comment 8
2011-11-16 02:35:53 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug