[GTK] fast/events/event-creation.html fails creating MediaStreamEvent https://bugs.webkit.org/show_bug.cgi?id=70720

Patch by Per-Erik Brodin <per-erik.brodin@ericsson.com> on 2011-11-16
Reviewed by Philippe Normand.

Source/WebCore:

Added missing overriding of Event::interfaceName()

* mediastream/MediaStreamEvent.cpp:
(WebCore::MediaStreamEvent::stream): Changed return value to raw pointer.
(WebCore::MediaStreamEvent::interfaceName): Added back from r98044.
* mediastream/MediaStreamEvent.h:
* mediastream/MediaStreamEvent.idl: Changed module name to "events".

LayoutTests:

* platform/gtk/Skipped: Unskipped fast/events/event-creation.html

Canonical link: https://commits.webkit.org/88956@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@100425 268f45cc-cd09-0410-ab3c-d52691b4dbfc