Source/WebCore/mediastream/MediaStreamEvent.h
@@ -32,8 +32,6 @@
 
 namespace WebCore {
 
-class Stream;
-
 class MediaStreamEvent : public Event {
 public:
     virtual ~MediaStreamEvent();
@@ -41,10 +39,9 @@ public:
     static PassRefPtr<MediaStreamEvent> create();
     static PassRefPtr<MediaStreamEvent> create(const AtomicString& type, bool canBubble, bool cancelable, PassRefPtr<MediaStream>);
 
-    // From EventTarget.
-    virtual bool isMediaStreamEvent() const { return true; }
+    MediaStream* stream() const;
 
-    PassRefPtr<MediaStream> stream() const;
+    virtual const AtomicString& interfaceName() const;
 
 private:
     MediaStreamEvent();
